// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataListItem > renders list item with avatar properly 1`] = `
<div>
  <div
    class="mantine-17wfman"
  >
    <div
      class="mantine-Avatar-root mantine-caerdd"
    >
      <div
        class="mantine-6psrey mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1pl3zja mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      style="flex: 1;"
    >
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <span
          class="mantine-Text-root mantine-1d564l0"
        >
          John Doe
        </span>
        <div
          class="mantine-Badge-root mantine-4y3x5h"
        >
          <span
            class="mantine-1t45alw mantine-Badge-inner"
          >
            developer
          </span>
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <svg
          class="tabler-icon tabler-icon-mail"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
          />
          <path
            d="M3 7l9 6l9 -6"
          />
        </svg>
        <div
          class="mantine-Text-root mantine-1d564l0"
        >
          john.doe@rebar.candidate.io
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <svg
          class="tabler-icon tabler-icon-phone"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
          />
        </svg>
        <div
          class="mantine-Text-root mantine-1d564l0"
        >
          (555) 555 - 1234
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataListItem > renders list item with side context properly 1`] = `
<div>
  <div
    class="mantine-17wfman"
  >
    <div
      class="mantine-Avatar-root mantine-caerdd"
    >
      <div
        class="mantine-6psrey mantine-Avatar-placeholder"
      >
        <svg
          class="mantine-1pl3zja mantine-Avatar-placeholderIcon"
          fill="none"
          height="15"
          viewBox="0 0 15 15"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.877014 7.49988C0.877014 3.84219 3.84216 0.877045 7.49985 0.877045C11.1575 0.877045 14.1227 3.84219 14.1227 7.49988C14.1227 11.1575 11.1575 14.1227 7.49985 14.1227C3.84216 14.1227 0.877014 11.1575 0.877014 7.49988ZM7.49985 1.82704C4.36683 1.82704 1.82701 4.36686 1.82701 7.49988C1.82701 8.97196 2.38774 10.3131 3.30727 11.3213C4.19074 9.94119 5.73818 9.02499 7.50023 9.02499C9.26206 9.02499 10.8093 9.94097 11.6929 11.3208C12.6121 10.3127 13.1727 8.97172 13.1727 7.49988C13.1727 4.36686 10.6328 1.82704 7.49985 1.82704ZM10.9818 11.9787C10.2839 10.7795 8.9857 9.97499 7.50023 9.97499C6.01458 9.97499 4.71624 10.7797 4.01845 11.9791C4.97952 12.7272 6.18765 13.1727 7.49985 13.1727C8.81227 13.1727 10.0206 12.727 10.9818 11.9787ZM5.14999 6.50487C5.14999 5.207 6.20212 4.15487 7.49999 4.15487C8.79786 4.15487 9.84999 5.207 9.84999 6.50487C9.84999 7.80274 8.79786 8.85487 7.49999 8.85487C6.20212 8.85487 5.14999 7.80274 5.14999 6.50487ZM7.49999 5.10487C6.72679 5.10487 6.09999 5.73167 6.09999 6.50487C6.09999 7.27807 6.72679 7.90487 7.49999 7.90487C8.27319 7.90487 8.89999 7.27807 8.89999 6.50487C8.89999 5.73167 8.27319 5.10487 7.49999 5.10487Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      style="flex: 1;"
    >
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <span
          class="mantine-Text-root mantine-1d564l0"
        >
          John Doe
        </span>
        <div
          class="mantine-Badge-root mantine-4y3x5h"
        >
          <span
            class="mantine-1t45alw mantine-Badge-inner"
          >
            developer
          </span>
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <svg
          class="tabler-icon tabler-icon-mail"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
          />
          <path
            d="M3 7l9 6l9 -6"
          />
        </svg>
        <div
          class="mantine-Text-root mantine-1d564l0"
        >
          john.doe@rebar.candidate.io
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <svg
          class="tabler-icon tabler-icon-phone"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
          />
        </svg>
        <div
          class="mantine-Text-root mantine-1d564l0"
        >
          (555) 555 - 1234
        </div>
      </div>
    </div>
    <div>
      <div
        class="mantine-Group-root mantine-8k3bl3"
      >
        <svg
          class="tabler-icon tabler-icon-star"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"
          />
        </svg>
        <svg
          class="tabler-icon tabler-icon-star"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"
          />
        </svg>
        <svg
          class="tabler-icon tabler-icon-star"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataListItem > renders simple list item properly 1`] = `
<div>
  <div
    class="mantine-17wfman"
  >
    <div
      style="flex: 1;"
    >
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <span
          class="mantine-Text-root mantine-1d564l0"
        >
          John Doe
        </span>
        <div
          class="mantine-Badge-root mantine-4y3x5h"
        >
          <span
            class="mantine-1t45alw mantine-Badge-inner"
          >
            developer
          </span>
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <svg
          class="tabler-icon tabler-icon-mail"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
          />
          <path
            d="M3 7l9 6l9 -6"
          />
        </svg>
        <div
          class="mantine-Text-root mantine-1d564l0"
        >
          john.doe@rebar.candidate.io
        </div>
      </div>
      <div
        class="mantine-Group-root mantine-k3ov3c"
      >
        <svg
          class="tabler-icon tabler-icon-phone"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
          />
        </svg>
        <div
          class="mantine-Text-root mantine-1d564l0"
        >
          (555) 555 - 1234
        </div>
      </div>
    </div>
  </div>
</div>
`;
